--- a/Courses/ECON_4750_Fall_2022/hw5.html
+++ b/Courses/ECON_4750_Fall_2022/hw5.html
@@ -363,7 +363,8 @@ pre code {
 class.</p>
 <p><strong>Extra Questions from Chapter 5:</strong> 3, 6</p>
 <p><strong>Coding Questions from Chapter 6:</strong> 1</p>
-<p><strong>Extra Questions from Chapter 6:</strong> 3, 6(a)</p>
+<p><strong>Extra Questions from Chapter 6:</strong> 3, 6(a) <span style="color:red;font-weight:bold">These questions do not need to be
+turned in, but are useful practice for the final exam.</span></p>
 
 
 
