--- a/Courses/ECON_4750_Fall_2022/final_extra_questions.html
+++ b/Courses/ECON_4750_Fall_2022/final_extra_questions.html
@@ -11,7 +11,7 @@
 
 
 
-<title>ECON 4750 Course Material</title>
+<title>Extra Practice Questions for Final Exam</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -354,125 +354,118 @@ pre code {
 
 
 
-<h1 class="title toc-ignore">ECON 4750 Course Material</h1>
+<h1 class="title toc-ignore">Extra Practice Questions for Final
+Exam</h1>
 
 </div>
 
 
-<ul>
-<li><a href="syllabus.pdf">Syllabus</a></li>
-</ul>
-<p><span style="color:red"><b>Midterm 1 date changed to September
-27</b></span></p>
-<ul>
-<li><a href="https://bcallaway11.github.io/econ_4750_notes/">Course
-Notes</a></li>
-</ul>
-<div id="homeworks" class="section level1">
-<h1>Homeworks</h1>
-<p><a href="hw1.html">HW 1</a>, due Tuesday, Sept. 6, [[<a href="hw1_sol.html">solutions</a>]], [[<a href="https://github.com/bcallaway11/bcallaway11.github.io/blob/master/Courses/ECON_4750_Fall_2022/hw1_sol.Rmd">Rmd
-file</a>]]</p>
-<p><a href="hw2.html">HW 2</a>, due Thursday, Sept. 22, [[<a href="hw2_sol.html">solutions</a>]], [[<a href="https://github.com/bcallaway11/bcallaway11.github.io/blob/master/Courses/ECON_4750_Fall_2022/hw1_sol.Rmd">Rmd
-file</a>]]</p>
-<p><a href="hw3.html">HW 3</a>, due Tuesday, Oct. 18, [[<a href="hw3_sol.html">solutions</a>]]</p>
-<p><a href="hw4.html">HW 4</a>, due Tuesday, Nov. 8, [[<a href="hw4_sol.html">solutions</a>]]</p>
-<p><a href="hw5.html">HW 5</a>, due Thursday, Dec. 1</p>
-</div>
-<div id="projects" class="section level1">
-<h1>Projects</h1>
-<p><a href="project1.html">Project 1</a>, due Tuesday, Nov. 22, [[<a href="project1_sol.html">My version of the project</a>]]</p>
-<ul>
-<li><a href="house_price_train.csv">house_price_train.csv</a>   |   <a href="house_price_test.csv">house_price_test.csv</a>   |   <a href="data_description.txt">data_description.txt</a></li>
-</ul>
-<p><a href="project2.html">Project 2</a>, This project is optional. If
-you turn it in, it must be submitted by 11:59pm on Tuesday, Dec. 6 (see
-details below).</p>
-<ul>
-<li><p><a href="jtrain_observational.dta">jtrain_observational.dta</a>  
-|   <a href="jtrain_observational_description.txt">jtrain_observational_description.txt</a>
-  |   <a href="jtrain_experimental.dta">jtrain_experimental.dta</a>   |
-  <a href="jtrain_experimental_description.txt">jtrain_experimental_description.txt</a></p>
-<p>On the syllabus, the project counts for 10% of your grade. If you
-turn it in, your final grade will be calculated as on the syllabus. If
-you do not turn it in, your grade will be out of 90 possible points. For
-example, if you scored 75 on the first midterm, 85 on the second
-midterm, score 95 on the final, you have a 90 homework average, scored
-an 80 on the first project, and 100 attendance/participation score, but
-do not turn in the project, then your grade for the semester will
-be:</p>
-<p><code>(.15*75 + .15*85 + .2*95 + .2*90 + .1*80 + .1*100)/.9 = 87.8</code></p>
-<p>If you additionally turn in this project and make a 99 on it, then
-your grade for the semester will be</p>
-<p><code>.15*75 + .15*85 + .2*95 + .2*90 + .1*80 + .1*100 + .1*99 = 88.9</code></p></li>
-</ul>
-</div>
-<div id="additional-course-materials" class="section level1">
-<h1>Additional Course Materials</h1>
-<ul>
-<li><p>First Week Slides: <a href="l1.html">What is
-Econometrics?</a></p></li>
-<li><p><a href="firm_data.csv">firm_data.csv</a> | <a href="firm_data.RData">firm_data.RData</a> | <a href="firm_data.dta">firm_data.dta</a></p></li>
-</ul>
-<p><strong>Additional Materials for Midterm 1</strong></p>
-<ul>
-<li><p><a href="midterm1_study_guide.html">Study Guide</a></p></li>
-<li><p><a href="midterm1_extra_questions.pdf">Additional Practice
-Questions</a>, [[<a href="midterm1_extra_questions_sol.pdf">solutions</a>]]</p></li>
-<li><p>Additional office hours: Friday 1:30-3:00 (Zoom only, please
-contact me by email if you would like to meet during this time), Monday
-9:30-11:00 (in person, Amos B408).</p></li>
-</ul>
-<p><strong>Additional Materials for Midterm 2</strong></p>
-<ul>
-<li><p><a href="midterm2_study_guide.html">Study Guide</a></p></li>
-<li><p><a href="midterm2_extra_questions.html">Additional Practice
-Questions</a>, [[<a href="midterm2_extra_questions_sol.html">solutions</a>]]</p></li>
-<li><p>Additional office hours: Friday 1:00-2:00pm, Monday 9:30-10:30am
-(in person, Amos B408).</p></li>
-</ul>
-<p><strong>Additional Materials for Final Exam</strong></p>
-<ul>
-<li><p><a href="final_study_guide.html">Study Guide</a></p></li>
-<li><p><a href="final_extra_questions.html">Additional Practice
-Questions</a>, [[<a href="final_extra_questions_sol.html">solutions</a>]]</p></li>
-<li><p>Additional office hours: Tuesday 2:30-4:00pm (in person, Amos
-B408). If this time does not work, please email me to set up an
-alternative time.</p></li>
-</ul>
-</div>
-<div id="data" class="section level1">
-<h1>Data</h1>
-<p>This list only includes data that needs to be downloaded from the
-course website. Other data is listed in the Course Notes along with
-steps to access the data and a link to a description of the data.</p>
-<ul>
-<li><p><a href="data/acs.RData">acs</a> [<a href="data/acs_description.txt">description</a>]</p></li>
-<li><p><a href="data/banks.RData">banks</a> [<a href="data/banks_description.txt">description</a>]</p></li>
-<li><p><a href="data/birthweight_smoking.dta">Birthweight_Smoking</a>
-[<a href="https://www.princeton.edu/~mwatson/Stock-Watson_3u/Students/EE_Datasets/Birthweight_Smoking_Description.pdf">description</a>]</p></li>
-<li><p><a href="data/diamond_train.RData">diamond_train</a> [<a href="https://www.kaggle.com/shivam2503/diamonds/">description</a>]</p></li>
-<li><p><a href="data/diamond_test.RData">diamond_test</a> [<a href="https://www.kaggle.com/shivam2503/diamonds/">description</a>]</p></li>
-<li><p><a href="data/fertilizer_2000.RData">fertilizer_2000</a> [<a href="data/fertilizer_description.txt">description</a>]</p></li>
-<li><p><a href="data/fertilizer_panel.RData">fertilizer_panel</a> [<a href="data/fertilizer_description.txt">description</a>]</p></li>
-<li><p><a href="data/house.RData">house</a> [<a href="data/house_description.txt">description</a>]</p></li>
-<li><p><a href="data/intergenerational_mobility.RData">intergenerational_mobility</a>
-[<a href="data/intergenerational_mobility_description.txt">description</a>]</p></li>
-<li><p><a href="data/Lead_Mortality.RData">Lead_Mortality</a> [<a href="http://www.princeton.edu/~mwatson/Stock-Watson_3u/Students/EE_Datasets/Lead_Mortality_Description.pdf">description</a>]</p></li>
-<li><p><a href="data/mlda.RData">mlda</a> [<a href="data/mlda_description.txt">description</a>]</p></li>
-<li><p><a href="data/mutual_funds.RData">mutual_funds</a> [<a href="data/mutual_funds_description.txt">description</a>]</p></li>
-<li><p><a href="data/rand_hie.RData">rand_hie</a> [<a href="data/rand_hie_description.txt">description</a>]</p></li>
-<li><p><a href="data/titanic_training.csv">titanic_training</a> [<a href="https://www.kaggle.com/c/titanic/data">description</a>]</p></li>
-<li><p><a href="data/titanic_testing.csv">titanic_testing</a> [<a href="https://www.kaggle.com/c/titanic/data">description</a>]</p></li>
-<li><p><a href="data/us_data.RData">us_data</a></p></li>
-</ul>
-</div>
-<div id="code-challenges" class="section level1">
-<h1>Code Challenges</h1>
-<ul>
-<li><p><a href="code_challenge1.html">Sep. 20</a></p></li>
-<li><p><a href="code_challenge2.html">Sep. 29</a></p></li>
-</ul>
-</div>
+<ol style="list-style-type: decimal">
+<li><p>Suppose you work for a social media company. The social media
+company is trying to predict the number of clicks that different types
+of advertisements will get on their website. You run the following
+regression to try to the number of clicks that a particular
+advertisement will get: <span class="math display">\[\begin{align*}
+   Clicks = \beta_0 + \beta_1 FontSize + \beta_2 Picture + U
+\end{align*}\]</span> where <span class="math inline">\(Clicks\)</span>
+is the number of clicks that an ad gets (in thousands), <span class="math inline">\(FontSize\)</span> is the size of the font of the
+ad, and <span class="math inline">\(Picture\)</span> is a binary
+variable that is equal to one if the ad contains a picture and 0
+otherwise.</p>
+<ol style="list-style-type: lower-alpha">
+<li><p>Suppose you estimate this model and estimate that <span class="math inline">\(\hat{\beta}_0 = 40\)</span>, <span class="math inline">\(\hat{\beta}_1 = 2\)</span>, and <span class="math inline">\(\hat{\beta}_2 = 80\)</span>. What would you
+predict that the number of clicks would be for an ad with 16 point font
+size and that contains a picture?</p></li>
+<li><p>Your boss is very happy with your work, but suggests making the
+model more complicated. Your boss suggests you run the following
+regression</p>
+<p><span class="math display">\[\begin{align*}
+Revenue = \beta_0 &amp;+ \beta_1 FontSize + \beta_2 Picture + \beta_3
+Animated \\ &amp;+ \beta_4 ColorfulFont + \beta_5 FontSize^2 + U
+\end{align*}\]</span> (here <span class="math inline">\(Animated\)</span> is a binary variable that is
+equal to one if the ad contains an animation and is equal to 0
+otherwise; and <span class="math inline">\(ColorfulFont\)</span> is a
+binary variable that is equal to 1 if the font in the ad is any color
+besides black and 0 otherwise). You estimate the model and notice
+that</p>
+<table>
+<thead>
+<tr class="header">
+<th></th>
+<th align="center">model from part (a)</th>
+<th align="center">model from part (b)</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><span class="math inline">\(R^2\)</span></td>
+<td align="center">0.11</td>
+<td align="center">0.37</td>
+</tr>
+<tr class="even">
+<td>Adj. <span class="math inline">\(R^2\)</span></td>
+<td align="center">0.10</td>
+<td align="center">0.35</td>
+</tr>
+<tr class="odd">
+<td>AIC</td>
+<td align="center">6789</td>
+<td align="center">4999</td>
+</tr>
+<tr class="even">
+<td>BIC</td>
+<td align="center">6536</td>
+<td align="center">4876</td>
+</tr>
+</tbody>
+</table>
+<p>Based on the table, which model do you prefer for predicting ad
+clicks?</p></li>
+<li><p>An alternative approach to choosing between these two models is
+to use J-fold cross-validation. Explain how you could use J-fold cross
+validation in this problem.</p></li>
+</ol></li>
+<li><p>Questions about causal inference.</p>
+<ol style="list-style-type: lower-alpha">
+<li><p>What does the condition <span class="math inline">\((Y(1), Y(0))
+\perp D\)</span> mean? When would you expect it to hold?</p></li>
+<li><p>What does the condition <span class="math inline">\((Y(1), Y(0))
+\perp D | (X_1, X_2)\)</span> mean? How is this different from the
+previous condition?</p></li>
+<li><p>Suppose you are interested interested in the effect of a state
+policy that decreases the minimum legal drinking age from 21 to 18 on
+the number of traffic fatalities in a state. Do you think that the
+condition in part (a) is likely to hold here? Explain. What variables
+would you need to include in the condition in part (b) to hold?
+Explain.</p></li>
+</ol></li>
+</ol>
+<!--
+
+3. Suppose you are interested in the causal effect of $D$ on $Y$.  If you could estimate the following model, you would be willing to interpret $\alpha$ as the causal effect of $D$ on $Y$
+\begin{align*}
+    Y_i = \beta_0 + \alpha D_i + \beta_1 W_i + U_i
+\end{align*}
+where $\E[U|D,W]=0$.  However, you do not observe $W_i$.  
+
+    a) Since you do not observe $W_i$, you are considering just running a regression of $Y_i$ on $D_i$.  Will this strategy work?  Explain.
+
+    b) Now suppose that you actually have access to panel data.  Further, suppose that $W$ does not vary over time, but that $Y$ and $D$ do vary over time.  Therefore, you are considering the model
+    \begin{align*}
+        Y_{it} = \beta_0 + \alpha D_{it} + \beta_1 W_i + U_{it}
+    \end{align*}
+    Explain how you can use this setup to estimate the causal effect $\alpha$ (be specific about exactly what regression you would run here).
+
+    c) Now, suppose that actually the effect of $W$ varies over time, so that the model from part (b) becomes
+    \begin{align*}
+        Y_{it} = \beta_0 + \alpha D_{it} + \beta_{1t}W_i + U_{it}
+    \end{align*}
+    (note: what's different here is that $\beta_{1t}$ changes across time periods).  Will your strategy from part (b) continue to work in this case?  Explain.
+
+4. Extra Questions 6.8
+
+-->
+<p><br><br><br></p>
 
 
 
