--- a/Courses/ECON_4750_Fall_2022/final_study_guide.html
+++ b/Courses/ECON_4750_Fall_2022/final_study_guide.html
@@ -11,7 +11,7 @@
 
 
 
-<title>ECON 4750 Course Material</title>
+<title>Final Exam Study Guide</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -354,125 +354,47 @@ pre code {
 
 
 
-<h1 class="title toc-ignore">ECON 4750 Course Material</h1>
+<h1 class="title toc-ignore">Final Exam Study Guide</h1>
 
 </div>
 
 
 <ul>
-<li><a href="syllabus.pdf">Syllabus</a></li>
-</ul>
-<p><span style="color:red"><b>Midterm 1 date changed to September
-27</b></span></p>
+<li><p>The main material for the final exam comes from Sections 4.1-4.9,
+Sections 5.1-5.3, and Sections 6.1-6.4 in the Course Notes (one comment:
+Section 4.11 covers inference in the context of linear regression; you
+do not need to know all the mathematical details, but you still have to
+know how to interpret standard errors, p-values, etc. from a regression.
+The exam is cumulative, but I think that you should expect 75% of the
+material to come from these new sections. The more challenging material
+on the exam will also come from the new sections.</p>
+<p>As I see it, some of the main topics from the first part of the
+course include:</p>
 <ul>
-<li><a href="https://bcallaway11.github.io/econ_4750_notes/">Course
-Notes</a></li>
+<li><p>Being able to write/interpret R code</p></li>
+<li><p>Being able to work with/manipulate expressions involving
+expectations</p></li>
+<li><p>Hypothesis testing, being able to interpret standard errors,
+p-values, confidence intervals, etc.</p></li>
+<li><p>Being able to get predicted values from a regression</p></li>
+<li><p>Besides these, the topics of tradeoffs between bias and variance
+that we talked about earlier in the semester are related to the
+prediction problems that we have talked about more recently</p></li>
+</ul></li>
+<li><p>My general advice for studying is to (i) study the notes that you
+have take in class, (ii) study the Course Notes, and (iii) for topics
+where you still have any doubts, follow the cross-references from the
+Course Notes to the textbook for an additional reference.</p></li>
+<li><p>R questions are fair game for the exam. As for previous exams,
+you should expect some coding question(s), but a larger portion (as well
+as the more challenging questions) of the exam will concern the
+prediction/causal inference parts of the class.</p></li>
+<li><p>I anticipate that the exam will take 1.5 hours to complete, but
+you will have the full 3 hours to take the exam.</p></li>
+<li><p>Finally, I have provided some extra questions <a href="final_extra_questions.html">here</a>. My recommendation is to
+study some before you try to answer these questions. The solutions are
+provided <a href="final_extra_questions.html">here</a>.</p></li>
 </ul>
-<div id="homeworks" class="section level1">
-<h1>Homeworks</h1>
-<p><a href="hw1.html">HW 1</a>, due Tuesday, Sept. 6, [[<a href="hw1_sol.html">solutions</a>]], [[<a href="https://github.com/bcallaway11/bcallaway11.github.io/blob/master/Courses/ECON_4750_Fall_2022/hw1_sol.Rmd">Rmd
-file</a>]]</p>
-<p><a href="hw2.html">HW 2</a>, due Thursday, Sept. 22, [[<a href="hw2_sol.html">solutions</a>]], [[<a href="https://github.com/bcallaway11/bcallaway11.github.io/blob/master/Courses/ECON_4750_Fall_2022/hw1_sol.Rmd">Rmd
-file</a>]]</p>
-<p><a href="hw3.html">HW 3</a>, due Tuesday, Oct. 18, [[<a href="hw3_sol.html">solutions</a>]]</p>
-<p><a href="hw4.html">HW 4</a>, due Tuesday, Nov. 8, [[<a href="hw4_sol.html">solutions</a>]]</p>
-<p><a href="hw5.html">HW 5</a>, due Thursday, Dec. 1</p>
-</div>
-<div id="projects" class="section level1">
-<h1>Projects</h1>
-<p><a href="project1.html">Project 1</a>, due Tuesday, Nov. 22, [[<a href="project1_sol.html">My version of the project</a>]]</p>
-<ul>
-<li><a href="house_price_train.csv">house_price_train.csv</a>   |   <a href="house_price_test.csv">house_price_test.csv</a>   |   <a href="data_description.txt">data_description.txt</a></li>
-</ul>
-<p><a href="project2.html">Project 2</a>, This project is optional. If
-you turn it in, it must be submitted by 11:59pm on Tuesday, Dec. 6 (see
-details below).</p>
-<ul>
-<li><p><a href="jtrain_observational.dta">jtrain_observational.dta</a>  
-|   <a href="jtrain_observational_description.txt">jtrain_observational_description.txt</a>
-  |   <a href="jtrain_experimental.dta">jtrain_experimental.dta</a>   |
-  <a href="jtrain_experimental_description.txt">jtrain_experimental_description.txt</a></p>
-<p>On the syllabus, the project counts for 10% of your grade. If you
-turn it in, your final grade will be calculated as on the syllabus. If
-you do not turn it in, your grade will be out of 90 possible points. For
-example, if you scored 75 on the first midterm, 85 on the second
-midterm, score 95 on the final, you have a 90 homework average, scored
-an 80 on the first project, and 100 attendance/participation score, but
-do not turn in the project, then your grade for the semester will
-be:</p>
-<p><code>(.15*75 + .15*85 + .2*95 + .2*90 + .1*80 + .1*100)/.9 = 87.8</code></p>
-<p>If you additionally turn in this project and make a 99 on it, then
-your grade for the semester will be</p>
-<p><code>.15*75 + .15*85 + .2*95 + .2*90 + .1*80 + .1*100 + .1*99 = 88.9</code></p></li>
-</ul>
-</div>
-<div id="additional-course-materials" class="section level1">
-<h1>Additional Course Materials</h1>
-<ul>
-<li><p>First Week Slides: <a href="l1.html">What is
-Econometrics?</a></p></li>
-<li><p><a href="firm_data.csv">firm_data.csv</a> | <a href="firm_data.RData">firm_data.RData</a> | <a href="firm_data.dta">firm_data.dta</a></p></li>
-</ul>
-<p><strong>Additional Materials for Midterm 1</strong></p>
-<ul>
-<li><p><a href="midterm1_study_guide.html">Study Guide</a></p></li>
-<li><p><a href="midterm1_extra_questions.pdf">Additional Practice
-Questions</a>, [[<a href="midterm1_extra_questions_sol.pdf">solutions</a>]]</p></li>
-<li><p>Additional office hours: Friday 1:30-3:00 (Zoom only, please
-contact me by email if you would like to meet during this time), Monday
-9:30-11:00 (in person, Amos B408).</p></li>
-</ul>
-<p><strong>Additional Materials for Midterm 2</strong></p>
-<ul>
-<li><p><a href="midterm2_study_guide.html">Study Guide</a></p></li>
-<li><p><a href="midterm2_extra_questions.html">Additional Practice
-Questions</a>, [[<a href="midterm2_extra_questions_sol.html">solutions</a>]]</p></li>
-<li><p>Additional office hours: Friday 1:00-2:00pm, Monday 9:30-10:30am
-(in person, Amos B408).</p></li>
-</ul>
-<p><strong>Additional Materials for Final Exam</strong></p>
-<ul>
-<li><p><a href="final_study_guide.html">Study Guide</a></p></li>
-<li><p><a href="final_extra_questions.html">Additional Practice
-Questions</a>, [[<a href="final_extra_questions_sol.html">solutions</a>]]</p></li>
-<li><p>Additional office hours: Tuesday 2:30-4:00pm (in person, Amos
-B408). If this time does not work, please email me to set up an
-alternative time.</p></li>
-</ul>
-</div>
-<div id="data" class="section level1">
-<h1>Data</h1>
-<p>This list only includes data that needs to be downloaded from the
-course website. Other data is listed in the Course Notes along with
-steps to access the data and a link to a description of the data.</p>
-<ul>
-<li><p><a href="data/acs.RData">acs</a> [<a href="data/acs_description.txt">description</a>]</p></li>
-<li><p><a href="data/banks.RData">banks</a> [<a href="data/banks_description.txt">description</a>]</p></li>
-<li><p><a href="data/birthweight_smoking.dta">Birthweight_Smoking</a>
-[<a href="https://www.princeton.edu/~mwatson/Stock-Watson_3u/Students/EE_Datasets/Birthweight_Smoking_Description.pdf">description</a>]</p></li>
-<li><p><a href="data/diamond_train.RData">diamond_train</a> [<a href="https://www.kaggle.com/shivam2503/diamonds/">description</a>]</p></li>
-<li><p><a href="data/diamond_test.RData">diamond_test</a> [<a href="https://www.kaggle.com/shivam2503/diamonds/">description</a>]</p></li>
-<li><p><a href="data/fertilizer_2000.RData">fertilizer_2000</a> [<a href="data/fertilizer_description.txt">description</a>]</p></li>
-<li><p><a href="data/fertilizer_panel.RData">fertilizer_panel</a> [<a href="data/fertilizer_description.txt">description</a>]</p></li>
-<li><p><a href="data/house.RData">house</a> [<a href="data/house_description.txt">description</a>]</p></li>
-<li><p><a href="data/intergenerational_mobility.RData">intergenerational_mobility</a>
-[<a href="data/intergenerational_mobility_description.txt">description</a>]</p></li>
-<li><p><a href="data/Lead_Mortality.RData">Lead_Mortality</a> [<a href="http://www.princeton.edu/~mwatson/Stock-Watson_3u/Students/EE_Datasets/Lead_Mortality_Description.pdf">description</a>]</p></li>
-<li><p><a href="data/mlda.RData">mlda</a> [<a href="data/mlda_description.txt">description</a>]</p></li>
-<li><p><a href="data/mutual_funds.RData">mutual_funds</a> [<a href="data/mutual_funds_description.txt">description</a>]</p></li>
-<li><p><a href="data/rand_hie.RData">rand_hie</a> [<a href="data/rand_hie_description.txt">description</a>]</p></li>
-<li><p><a href="data/titanic_training.csv">titanic_training</a> [<a href="https://www.kaggle.com/c/titanic/data">description</a>]</p></li>
-<li><p><a href="data/titanic_testing.csv">titanic_testing</a> [<a href="https://www.kaggle.com/c/titanic/data">description</a>]</p></li>
-<li><p><a href="data/us_data.RData">us_data</a></p></li>
-</ul>
-</div>
-<div id="code-challenges" class="section level1">
-<h1>Code Challenges</h1>
-<ul>
-<li><p><a href="code_challenge1.html">Sep. 20</a></p></li>
-<li><p><a href="code_challenge2.html">Sep. 29</a></p></li>
-</ul>
-</div>
 
 
 
