--- a/Courses/ECON_8070_Fall_2022/index.html
+++ b/Courses/ECON_8070_Fall_2022/index.html
@@ -298,8 +298,8 @@ pre code {
   border-radius: 4px;
 }
 
-.tabset-dropdown > .nav-tabs > li.active:before, .tabset-dropdown > .nav-tabs.nav-tabs-open:before {
-  content: "\e259";
+.tabset-dropdown > .nav-tabs > li.active:before {
+  content: "";
   font-family: 'Glyphicons Halflings';
   display: inline-block;
   padding: 10px;
@@ -307,9 +307,16 @@ pre code {
 }
 
 .tabset-dropdown > .nav-tabs.nav-tabs-open > li.active:before {
-  content: "\e258";
-  font-family: 'Glyphicons Halflings';
+  content: "";
   border: none;
+}
+
+.tabset-dropdown > .nav-tabs.nav-tabs-open:before {
+  content: "";
+  font-family: 'Glyphicons Halflings';
+  display: inline-block;
+  padding: 10px;
+  border-right: 1px solid #ddd;
 }
 
 .tabset-dropdown > .nav-tabs > li.active {
@@ -381,7 +388,7 @@ not need to be turned in</span></p>
 <p><a href="additional_practice_2.html">Additional Practice Questions
 for Midterm 2</a>, [[<a href="additional_practice_2_sol.pdf">solutions</a>]] <span style="color: red; font-weight: bold;">These do not need to be turned
 in</span></p>
-<p><a href="hw4.html">HW 4</a>, due Thursday, Dec. 1</p>
+<p><a href="hw4.html">HW 4</a>, due Thursday, Dec. 1, [[<a href="hw4_sol.pdf">solutions</a>]]</p>
 </div>
 <div id="course-material" class="section level1">
 <h1>Course Material</h1>
