--- a/Courses/ECON_4750_Fall_2022/hw5_sol.html
+++ b/Courses/ECON_4750_Fall_2022/hw5_sol.html
@@ -11,7 +11,7 @@
 
 
 
-<title>ECON 4750 Course Material</title>
+<title>Homework 5 Solutions</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -361,124 +361,164 @@ pre code {
 
 
 
-<h1 class="title toc-ignore">ECON 4750 Course Material</h1>
+<h1 class="title toc-ignore">Homework 5 Solutions</h1>
 
 </div>
 
 
-<ul>
-<li><a href="syllabus.pdf">Syllabus</a></li>
-</ul>
-<p><span style="color:red"><b>Midterm 1 date changed to September
-27</b></span></p>
-<ul>
-<li><a href="https://bcallaway11.github.io/econ_4750_notes/">Course
-Notes</a></li>
-</ul>
-<div id="homeworks" class="section level1">
-<h1>Homeworks</h1>
-<p><a href="hw1.html">HW 1</a>, due Tuesday, Sept. 6, [[<a href="hw1_sol.html">solutions</a>]], [[<a href="https://github.com/bcallaway11/bcallaway11.github.io/blob/master/Courses/ECON_4750_Fall_2022/hw1_sol.Rmd">Rmd
-file</a>]]</p>
-<p><a href="hw2.html">HW 2</a>, due Thursday, Sept. 22, [[<a href="hw2_sol.html">solutions</a>]], [[<a href="https://github.com/bcallaway11/bcallaway11.github.io/blob/master/Courses/ECON_4750_Fall_2022/hw1_sol.Rmd">Rmd
-file</a>]]</p>
-<p><a href="hw3.html">HW 3</a>, due Tuesday, Oct. 18, [[<a href="hw3_sol.html">solutions</a>]]</p>
-<p><a href="hw4.html">HW 4</a>, due Tuesday, Nov. 8, [[<a href="hw4_sol.html">solutions</a>]]</p>
-<p><a href="hw5.html">HW 5</a>, due Thursday, Dec. 1, [[<a href="hw5_sol.html">solutions</a>]]</p>
+<div id="chapter-5-extra-question-3" class="section level2">
+<h2>Chapter 5, Extra Question 3</h2>
+<p>Recall that <span class="math display">\[
+\begin{aligned}
+  AIC &amp;= 2k + n\log(SSR) \\
+  BIC &amp;= k\log(n) + n\log(SSR)
+\end{aligned}
+\]</span> so that the only difference between <span class="math inline">\(AIC\)</span> and <span class="math inline">\(BIC\)</span> is in their penalty terms: <span class="math inline">\(2k\)</span> and <span class="math inline">\(k\log(n)\)</span>, respectively. Then, as long as
+<span class="math inline">\(n\geq 8\)</span> (which would presumably
+always be the case when you are doing model selection), the penalty for
+adding another regressor is larger for <span class="math inline">\(BIC\)</span> than <span class="math inline">\(AIC\)</span>. This means that <span class="math inline">\(BIC\)</span> will tend to choose “less
+complicated” models and <span class="math inline">\(AIC\)</span> will
+tend to choose “more complicated” models.</p>
 </div>
-<div id="projects" class="section level1">
-<h1>Projects</h1>
-<p><a href="project1.html">Project 1</a>, due Tuesday, Nov. 22, [[<a href="project1_sol.html">My version of the project</a>]]</p>
-<ul>
-<li><a href="house_price_train.csv">house_price_train.csv</a>   |   <a href="house_price_test.csv">house_price_test.csv</a>   |   <a href="data_description.txt">data_description.txt</a></li>
-</ul>
-<p><a href="project2.html">Project 2</a>, This project is optional. If
-you turn it in, it must be submitted by 11:59pm on Tuesday, Dec. 6 (see
-details below).</p>
-<ul>
-<li><p><a href="jtrain_observational.dta">jtrain_observational.dta</a>  
-|   <a href="jtrain_observational_description.txt">jtrain_observational_description.txt</a>
-  |   <a href="jtrain_experimental.dta">jtrain_experimental.dta</a>   |
-  <a href="jtrain_experimental_description.txt">jtrain_experimental_description.txt</a></p>
-<p>On the syllabus, the project counts for 10% of your grade. If you
-turn it in, your final grade will be calculated as on the syllabus. If
-you do not turn it in, your grade will be out of 90 possible points. For
-example, if you scored 75 on the first midterm, 85 on the second
-midterm, score 95 on the final, you have a 90 homework average, scored
-an 80 on the first project, and 100 attendance/participation score, but
-do not turn in the project, then your grade for the semester will
-be:</p>
-<p><code>(.15*75 + .15*85 + .2*95 + .2*90 + .1*80 + .1*100)/.9 = 87.8</code></p>
-<p>If you additionally turn in this project and make a 99 on it, then
-your grade for the semester will be</p>
-<p><code>.15*75 + .15*85 + .2*95 + .2*90 + .1*80 + .1*100 + .1*99 = 88.9</code></p></li>
-</ul>
+<div id="chapter-5-extra-question-6" class="section level2">
+<h2>Chapter 5, Extra Question 6</h2>
+<p>In terms of mean squared prediction error, the accuracy of our
+predictions depends on both the bias and the variance of the
+predictions. If we can substantially reduce variance by introducing a
+small amount of bias, this can result in better predictions.</p>
+<p>This argument doesn’t always apply. For example, if you make “bad
+choices” of the penalty term using Lasso or Ridge regressions, you could
+introduce lots of bias that might not be offset by the smaller
+variance.</p>
 </div>
-<div id="additional-course-materials" class="section level1">
-<h1>Additional Course Materials</h1>
-<ul>
-<li><p>First Week Slides: <a href="l1.html">What is
-Econometrics?</a></p></li>
-<li><p><a href="firm_data.csv">firm_data.csv</a> | <a href="firm_data.RData">firm_data.RData</a> | <a href="firm_data.dta">firm_data.dta</a></p></li>
-</ul>
-<p><strong>Additional Materials for Midterm 1</strong></p>
-<ul>
-<li><p><a href="midterm1_study_guide.html">Study Guide</a></p></li>
-<li><p><a href="midterm1_extra_questions.pdf">Additional Practice
-Questions</a>, [[<a href="midterm1_extra_questions_sol.pdf">solutions</a>]]</p></li>
-<li><p>Additional office hours: Friday 1:30-3:00 (Zoom only, please
-contact me by email if you would like to meet during this time), Monday
-9:30-11:00 (in person, Amos B408).</p></li>
-</ul>
-<p><strong>Additional Materials for Midterm 2</strong></p>
-<ul>
-<li><p><a href="midterm2_study_guide.html">Study Guide</a></p></li>
-<li><p><a href="midterm2_extra_questions.html">Additional Practice
-Questions</a>, [[<a href="midterm2_extra_questions_sol.html">solutions</a>]]</p></li>
-<li><p>Additional office hours: Friday 1:00-2:00pm, Monday 9:30-10:30am
-(in person, Amos B408).</p></li>
-</ul>
-<p><strong>Additional Materials for Final Exam</strong></p>
-<ul>
-<li><p><a href="final_study_guide.html">Study Guide</a></p></li>
-<li><p><a href="final_extra_questions.html">Additional Practice
-Questions</a>, [[<a href="final_extra_questions_sol.html">solutions</a>]]</p></li>
-<li><p>Additional office hours: Tuesday 2:30-4:00pm (in person, Amos
-B408). If this time does not work, please email me to set up an
-alternative time.</p></li>
-</ul>
+<div id="chapter-6-coding-question-1" class="section level2">
+<h2>Chapter 6, Coding Question 1</h2>
+<p><strong>Part (a)</strong></p>
+<pre class="r"><code>load(&quot;../../Detailed Course Notes/data/rand_hie.RData&quot;)
+rand_hie_subset &lt;- subset(rand_hie, plan_type %in% c(&quot;Catastrophic&quot;, &quot;Free&quot;))
+
+reg_a &lt;- lm(total_med_expenditure ~ plan_type, data=rand_hie_subset)
+summary(reg_a)</code></pre>
+<pre><code>## 
+## Call:
+## lm(formula = total_med_expenditure ~ plan_type, data = rand_hie_subset)
+## 
+## Residuals:
+##     Min      1Q  Median      3Q     Max 
+##  -532.9  -392.8  -299.4    38.4 17987.6 
+## 
+## Coefficients:
+##               Estimate Std. Error t value Pr(&gt;|t|)    
+## (Intercept)     392.77      40.19   9.773   &lt;2e-16 ***
+## plan_typeFree   140.12      49.74   2.817   0.0049 ** 
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
+## 
+## Residual standard error: 993.4 on 1758 degrees of freedom
+## Multiple R-squared:  0.004493,   Adjusted R-squared:  0.003927 
+## F-statistic: 7.935 on 1 and 1758 DF,  p-value: 0.004903</code></pre>
+<p>Relative to having only “catastrophic” insurance coverage, total
+medical expenditure (notice that total medical expenditure includes both
+how much the person paid themselves plus how much their insurance paid)
+is estimated to be substantially higher, on average, for individuals
+assigned to “free” insurance (i.e., that paid nothing for medical care);
+in particular, we estimate that “free” insurance results about $140
+more, on average, than those with only catastrophic coverage. In my
+view, this difference is large in magnitude as the average expenditure
+is $393 for those with catastrophic coverage, which implies that those
+with free coverage have 36% higher total medical expenditures. Since
+individuals were randomly assigned to a type of plan, it seems
+reasonable to interpret these results as being a causal effect of plan
+type on total medical spending.</p>
+<p><strong>Part (b)</strong></p>
+<pre class="r"><code>reg_b &lt;- lm(face_to_face_visits ~ plan_type, data=rand_hie_subset)
+summary(reg_b)</code></pre>
+<pre><code>## 
+## Call:
+## lm(formula = face_to_face_visits ~ plan_type, data = rand_hie_subset)
+## 
+## Residuals:
+##    Min     1Q Median     3Q    Max 
+## -4.928 -3.192 -1.792  0.808 91.672 
+## 
+## Coefficients:
+##               Estimate Std. Error t value Pr(&gt;|t|)    
+## (Intercept)     3.1917     0.2562  12.457  &lt; 2e-16 ***
+## plan_typeFree   1.7361     0.3171   5.475 5.01e-08 ***
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
+## 
+## Residual standard error: 6.333 on 1758 degrees of freedom
+## Multiple R-squared:  0.01676,    Adjusted R-squared:  0.01621 
+## F-statistic: 29.98 on 1 and 1758 DF,  p-value: 5.007e-08</code></pre>
+<p>These results are broadly similar to the ones before. Individuals
+assigned to the “free” insurance plan had, on average, 1.7 more face to
+face visits with doctors. This is 54% more than individuals randomly
+assigned to the “catastrophic” insurance plan. As in part (a), it seems
+reasonable to interpret these as causal effects due to the random
+assignment.</p>
+<p><strong>Part (c)</strong></p>
+<pre class="r"><code>reg_c &lt;- lm(health_index ~ plan_type, data=rand_hie_subset)
+summary(reg_c)</code></pre>
+<pre><code>## 
+## Call:
+## lm(formula = health_index ~ plan_type, data = rand_hie_subset)
+## 
+## Residuals:
+##     Min      1Q  Median      3Q     Max 
+## -60.525  -9.784   1.516  10.616  32.216 
+## 
+## Coefficients:
+##               Estimate Std. Error t value Pr(&gt;|t|)    
+## (Intercept)    68.5247     0.6190 110.698   &lt;2e-16 ***
+## plan_typeFree  -0.7407     0.7661  -0.967    0.334    
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
+## 
+## Residual standard error: 15.3 on 1758 degrees of freedom
+## Multiple R-squared:  0.0005315,  Adjusted R-squared:  -3.708e-05 
+## F-statistic: 0.9348 on 1 and 1758 DF,  p-value: 0.3338</code></pre>
+<p>These results are different from the previous ones. Although
+individuals assigned to the “free” insurance plan appear to be utilizing
+more medical care, it does not appear to be improving their health (at
+least according to this measure of an individual’s health). The results
+here are not statistically significant and quantitatively small; for
+example, here we estimate that individuals in the “free” insurance plan
+have about 1% lower health index, on average, than those in the
+“catastrophic” plan.</p>
+<p><strong>Part (d)</strong></p>
+<p>Parts (a)-(c) seem to suggest that “free” insurance increased medical
+care usage without much of an effect on health (at least in the way that
+we were able to measure health).</p>
 </div>
-<div id="data" class="section level1">
-<h1>Data</h1>
-<p>This list only includes data that needs to be downloaded from the
-course website. Other data is listed in the Course Notes along with
-steps to access the data and a link to a description of the data.</p>
-<ul>
-<li><p><a href="data/acs.RData">acs</a> [<a href="data/acs_description.txt">description</a>]</p></li>
-<li><p><a href="data/banks.RData">banks</a> [<a href="data/banks_description.txt">description</a>]</p></li>
-<li><p><a href="data/birthweight_smoking.dta">Birthweight_Smoking</a>
-[<a href="https://www.princeton.edu/~mwatson/Stock-Watson_3u/Students/EE_Datasets/Birthweight_Smoking_Description.pdf">description</a>]</p></li>
-<li><p><a href="data/diamond_train.RData">diamond_train</a> [<a href="https://www.kaggle.com/shivam2503/diamonds/">description</a>]</p></li>
-<li><p><a href="data/diamond_test.RData">diamond_test</a> [<a href="https://www.kaggle.com/shivam2503/diamonds/">description</a>]</p></li>
-<li><p><a href="data/fertilizer_2000.RData">fertilizer_2000</a> [<a href="data/fertilizer_description.txt">description</a>]</p></li>
-<li><p><a href="data/fertilizer_panel.RData">fertilizer_panel</a> [<a href="data/fertilizer_description.txt">description</a>]</p></li>
-<li><p><a href="data/house.RData">house</a> [<a href="data/house_description.txt">description</a>]</p></li>
-<li><p><a href="data/intergenerational_mobility.RData">intergenerational_mobility</a>
-[<a href="data/intergenerational_mobility_description.txt">description</a>]</p></li>
-<li><p><a href="data/Lead_Mortality.RData">Lead_Mortality</a> [<a href="http://www.princeton.edu/~mwatson/Stock-Watson_3u/Students/EE_Datasets/Lead_Mortality_Description.pdf">description</a>]</p></li>
-<li><p><a href="data/mlda.RData">mlda</a> [<a href="data/mlda_description.txt">description</a>]</p></li>
-<li><p><a href="data/mutual_funds.RData">mutual_funds</a> [<a href="data/mutual_funds_description.txt">description</a>]</p></li>
-<li><p><a href="data/rand_hie.RData">rand_hie</a> [<a href="data/rand_hie_description.txt">description</a>]</p></li>
-<li><p><a href="data/titanic_training.csv">titanic_training</a> [<a href="https://www.kaggle.com/c/titanic/data">description</a>]</p></li>
-<li><p><a href="data/titanic_testing.csv">titanic_testing</a> [<a href="https://www.kaggle.com/c/titanic/data">description</a>]</p></li>
-<li><p><a href="data/us_data.RData">us_data</a></p></li>
-</ul>
+<div id="chapter-6-extra-question-3" class="section level2">
+<h2>Chapter 6, Extra Question 3</h2>
+<p>Unconfoundedness is the condition that</p>
+<p><span class="math display">\[
+(Y(1),Y(0)) \perp D | X
+\]</span></p>
+<p>This says that potential outcomes are independent of the treatment
+after conditioning on covariates. In practice, it means that, if we find
+individuals with the same <span class="math inline">\(X\)</span>
+covariates and some of which participate in the treatment while others
+do not, we would be willing to interpret differences in their average
+outcomes as being causal effects of the treatment.</p>
 </div>
-<div id="code-challenges" class="section level1">
-<h1>Code Challenges</h1>
-<ul>
-<li><p><a href="code_challenge1.html">Sep. 20</a></p></li>
-<li><p><a href="code_challenge2.html">Sep. 29</a></p></li>
-</ul>
+<div id="chapter-6-extra-question-6" class="section level2">
+<h2>Chapter 6, Extra Question 6</h2>
+<p><strong>Part (a)</strong></p>
+<p>It is probably not reasonable to interpret <span class="math inline">\(\hat{\alpha}\)</span> as an estimate of the causal
+effect of being in a union. There are probably a number of other things
+that we would need to be able to control for in order to interpret this
+as a causal effect; some examples are: age (I think union members tend
+to be older in the U.S. and that tends to be correlated with higher
+earnings), occupation/industry (union members tend to be concentrated in
+the manufacturing sector where there traditionally have been fairly
+large wage premiums), and perhaps other things like motivation and
+ability (it’s not totally clear if this is true, but it is at least
+worth entertaining the idea that either of these could be correlated
+with union membership and they are both very likely correlated with
+earnings).</p>
 </div>
 
 
