--- a/Courses/ECON_8070_Fall_2022/03_regression.html
+++ b/Courses/ECON_8070_Fall_2022/03_regression.html
@@ -406,23 +406,19 @@ span.practice {
 with some additional comments / references.</p>
 <!--The main goals for this section are (i) to learn about how to use data to estimate (population) quantities that we may interested in learning about, (ii) good properties for estimators to have, and (iii) how to tell the difference between -->
 <ol style="list-style-type: decimal">
-<li><p><a href="03_linear_regression_1.pdf">Conditional Expectation and
-Projection (plus introduction/review of linear algebra)</a></p>
+<li><p><a href="03_linear_regression_1.pdf">Introduction/Review of
+Linear Algebra</a></p>
+<ul>
+<li>Reading: Sections from notes from Appendix A.</li>
+</ul></li>
+<li><p><a href="03_linear_regression_2.pdf">Conditional Expectation and
+Projection</a></p>
 <ul>
 <li>Reading: Please read all of chapter 2 in the textbook, but pay
 particular attention to the sections referenced in the notes.</li>
 </ul></li>
-<li><p>[The Algebra of Least Squares]</p>
-<ul>
-<li>Reading: Please read all of chapter 3 in the textbook, but pay
-particular attention to the sections referenced in the notes.</li>
-</ul></li>
-<li><p>[Least Squares Regression]</p>
-<ul>
-<li>Reading: Please read all of chapter 4 in the textbook, but pay
-particular attention to the sections referenced in the notes.</li>
-</ul></li>
-<li><p>[Asymptotic Theory for Least Squares]</p>
+<li><p><a href="03_linear_regression_3.pdf">Asymptotic Theory for Least
+Squares</a></p>
 <ul>
 <li>Reading: Please read all of chapter 6 and 7 in the textbook, but pay
 particular attention to the sections referenced in the notes.</li>
