--- a/Courses/ECON_8080_Spring_2023/01_linear_regression.html
+++ b/Courses/ECON_8080_Spring_2023/01_linear_regression.html
@@ -410,10 +410,10 @@ covered in the book).</p>
 <ul>
 <li><p><a href="introduction_slides.html">Introductory
 slides</a></p></li>
-<li><p><a href="01_linear_regression_1.pdf">Lecture Notes 1: Conditional
-Expectation and Projection</a> (These notes cover chapter 2 in the book.
-Please read the entire chapter, but pay particular attention to the
-sections covered in the notes.)</p></li>
+<li><p><a href="01_linear_regression_notes_1.pdf">Lecture Notes 1:
+Conditional Expectation and Projection</a> (These notes cover chapter 2
+in the book. Please read the entire chapter, but pay particular
+attention to the sections covered in the notes.)</p></li>
 </ul>
 <!--  - [Some additional simulations/explanations about omitted variable bias](omitted_variable_bias_simulations.html)-->
 <ul>
