--- a/Courses/ECON_8080_Spring_2023/index.html
+++ b/Courses/ECON_8080_Spring_2023/index.html
@@ -298,8 +298,8 @@ pre code {
   border-radius: 4px;
 }
 
-.tabset-dropdown > .nav-tabs > li.active:before, .tabset-dropdown > .nav-tabs.nav-tabs-open:before {
-  content: "\e259";
+.tabset-dropdown > .nav-tabs > li.active:before {
+  content: "";
   font-family: 'Glyphicons Halflings';
   display: inline-block;
   padding: 10px;
@@ -307,9 +307,16 @@ pre code {
 }
 
 .tabset-dropdown > .nav-tabs.nav-tabs-open > li.active:before {
-  content: "\e258";
-  font-family: 'Glyphicons Halflings';
+  content: "";
   border: none;
+}
+
+.tabset-dropdown > .nav-tabs.nav-tabs-open:before {
+  content: "";
+  font-family: 'Glyphicons Halflings';
+  display: inline-block;
+  padding: 10px;
+  border-right: 1px solid #ddd;
 }
 
 .tabset-dropdown > .nav-tabs > li.active {
@@ -364,7 +371,7 @@ pre code {
 </ul>
 <div id="homeworks" class="section level1">
 <h1>Homeworks</h1>
-<p>…none yet</p>
+<p><a href="hw1.html">HW 1</a>, due Tuesday, Jan. 31</p>
 </div>
 <div id="course-material" class="section level1">
 <h1>Course Material</h1>
