--- a/Courses/ECON_8080_Spring_2023/index.html
+++ b/Courses/ECON_8080_Spring_2023/index.html
@@ -371,7 +371,11 @@ pre code {
 </ul>
 <div id="homeworks" class="section level1">
 <h1>Homeworks</h1>
-<p><a href="hw1.html">HW 1</a>, due Tuesday, Jan. 31</p>
+<p><a href="hw1.html">HW 1</a>, due Tuesday, Jan. 31, [[<a href="hw1_sol.pdf">solutions</a>]]</p>
+<p><a href="hw2.html">HW 2</a>, due Thursday, Feb. 9,</p>
+<ul>
+<li><a href="cps09mar.dta">cps09mar.dta</a></li>
+</ul>
 </div>
 <div id="course-material" class="section level1">
 <h1>Course Material</h1>
