--- a/Courses/ECON_8080_Spring_2023/01_linear_regression.html
+++ b/Courses/ECON_8080_Spring_2023/01_linear_regression.html
@@ -417,13 +417,15 @@ attention to the sections covered in the notes.)</p></li>
 </ul>
 <!--  - [Some additional simulations/explanations about omitted variable bias](omitted_variable_bias_simulations.html)-->
 <ul>
-<li><a href="01_linear_regression_notes_2.pdf">Lecture Notes 2: Why
+<li><p><a href="01_linear_regression_notes_2.pdf">Lecture Notes 2: Why
 Linear Regression?</a> (These notes are mainly independent of the
-textbook though related to H: 2.30).</li>
+textbook though related to H: 2.30).</p></li>
+<li><p><a href="01_linear_regression_notes_3.pdf">Lecture Notes 3: The
+Algebra of Least Squares</a> (These notes cover chapter 3 in the book.
+Please read the entire chapter, but pay particular attention to the
+sections covered in the notes.)</p></li>
 </ul>
 <!--
-* [Lecture Notes 3: The Algebra of Least Squares](01_linear_regression_notes_3.pdf) (These notes cover chapter 3 in the book.  Please read the entire chapter, but pay particular attention to the sections covered in the notes.)
-
 * [Lecture Notes 4: Least Squares Regression](01_linear_regression_notes_4.pdf) (These notes cover chapter 4 in the book.  Please read the entire chapter, but pay particular attention to the sections covered in the notes.)
 
 * [Lecture Notes 5: Asymptotic Theory for Least Squares](01_linear_regression_4.pdf) (These notes cover chapters 6 and 7 in the book.  Please read the entire chapters, but pay particular attention to the sections covered in the notes.)
