--- a/Courses/ECON_8080_Spring_2023/index.html
+++ b/Courses/ECON_8080_Spring_2023/index.html
@@ -372,7 +372,7 @@ pre code {
 <div id="homeworks" class="section level1">
 <h1>Homeworks</h1>
 <p><a href="hw1.html">HW 1</a>, due Tuesday, Jan. 31, [[<a href="hw1_sol.pdf">solutions</a>]]</p>
-<p><a href="hw2.html">HW 2</a>, due Thursday, Feb. 9,</p>
+<p><a href="hw2.html">HW 2</a>, due Thursday, Feb. 9, [[<a href="hw2_sol.pdf">solutions</a>]]</p>
 <ul>
 <li><a href="cps09mar.dta">cps09mar.dta</a></li>
 </ul>
@@ -387,8 +387,9 @@ Some of the topics at the end of the semester are tentative.)</p>
 <li><p><a href="introduction_to_R.html">Introduction to R</a></p></li>
 <li><p><a href="01_linear_regression.html">Linear
 Regression</a></p></li>
-<li><p><a href="02_hypothesis_testing.html">Inference/Hypothesis
-Testing</a></p></li>
+</ol>
+<!--2. [Inference/Hypothesis Testing](02_hypothesis_testing.html)-->
+<ol start="3" style="list-style-type: decimal">
 <li><p><a href="03_resampling_methods.html">Resampling
 Methods</a></p></li>
 <li><p><a href="04_nonlinear_models.html">Introduction to Nonlinear
