--- a/Courses/ECON_8080_Spring_2023/index.html
+++ b/Courses/ECON_8080_Spring_2023/index.html
@@ -369,7 +369,7 @@ pre code {
 <ul>
 <li><a href="cps09mar.dta">cps09mar.dta</a></li>
 </ul>
-<p><a href="hw3.html">HW 3</a>, due Thursday, Mar. 2</p>
+<p><a href="hw3.html">HW 3</a>, due Thursday, Mar. 2, [[<a href="hw3_sol.pdf">solutions</a>]]</p>
 </div>
 <div id="additional-material-for-midterm-1" class="section level1">
 <h1>Additional Material for Midterm 1</h1>
