additional practice solutions

--- a/Courses/ECON_8080_Spring_2023/index.html
+++ b/Courses/ECON_8080_Spring_2023/index.html
@@ -389,8 +389,7 @@ for Midterm 1</a>, these do not need to be turned in, [[<a href="additional_prac
 Models, and the first part of Alternative Approaches to Causal Inference
 (up to the section called “Alternative Approaches” on p.9)</p></li>
 <li><p><a href="additional_practice2.html">Additional Practice Questions
-for Midterm 2</a>, these questions do not need to be turned in, I’ll
-post solutions soon.</p></li>
+for Midterm 2</a>, these questions do not need to be turned in, [[<a href="additional_practice2_sol.pdf">solutions</a>]]</p></li>
 </ul>
 </div>
 <div id="course-material" class="section level1">
